--- a/src/laporan/buktitransaksi.jrxml
+++ b/src/laporan/buktitransaksi.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4e5e3ffe-b5c5-4e0f-b82a-d368780b5882">
-	<property name="ireport.zoom" value="1.4641000000000008"/>
+	<property name="ireport.zoom" value="1.3310000000000006"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.y" value="17"/>
 	<style name="Title" fontName="Times New Roman" fontSize="50" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
@@ -66,21 +66,21 @@ INNER JOIN dokter AS d ON d.id_dokter = r.id_dokter WHERE id_transaksi = $P{id_t
 				<textElement verticalAlignment="Middle">
 					<font size="10" pdfFontName="Times-Roman"/>
 				</textElement>
-				<text><![CDATA[Rumah Sakit TK IV Cijantung]]></text>
+				<text><![CDATA[Klinik Nurhidayah Medical]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="SubTitle" x="250" y="76" width="66" height="22" uuid="83d5dd59-d0d9-4ef3-8dec-0695cbc43788"/>
+				<reportElement style="SubTitle" x="238" y="76" width="88" height="22" uuid="83d5dd59-d0d9-4ef3-8dec-0695cbc43788"/>
 				<textElement>
 					<font fontName="Times New Roman" pdfFontName="Times-Roman"/>
 				</textElement>
-				<text><![CDATA[Gedong]]></text>
+				<text><![CDATA[Tajurhalang]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="156" y="98" width="249" height="42" uuid="5a8666a0-12d7-468d-9d66-b20627c752ae"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10"/>
 				</textElement>
-				<text><![CDATA[Gedong, Kec. Ps. Rebo, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta]]></text>
+				<text><![CDATA[Jl. Raya Susukan No.43, Sukmajaya, Kec. Tajur Halang, Kabupaten Bogor, Jawa Barat 16320]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Title" x="194" y="15" width="177" height="23" uuid="b9991f7c-2936-4d61-814b-bf698534a618"/>
@@ -201,18 +201,15 @@ INNER JOIN dokter AS d ON d.id_dokter = r.id_dokter WHERE id_transaksi = $P{id_t
 			</staticText>
 			<textField>
 				<reportElement x="405" y="57" width="100" height="20" uuid="b34a1f8c-0373-41a3-af50-f3eb08a24bdd"/>
-				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{total_biaya})
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{total_biaya})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="405" y="91" width="100" height="20" uuid="f1a1fbc9-3491-4e06-bf36-9988b19b9c6d"/>
-				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{cash})
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{cash})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="405" y="131" width="100" height="20" uuid="b92f0100-0921-46b1-a042-b76e239d82e7"/>
-				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{kembalian})
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Rp. " + new java.text.DecimalFormat("#,##0.00").format($F{kembalian})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="113" y="23" width="100" height="20" uuid="f0b87d6c-d9b5-418f-8d26-ebf4c2f33012"/>
@@ -227,7 +224,7 @@ INNER JOIN dokter AS d ON d.id_dokter = r.id_dokter WHERE id_transaksi = $P{id_t
 				<textFieldExpression><![CDATA[$F{keluhan}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="299" y="23" width="100" height="20" uuid="3d5fc88b-b41f-4cde-ab03-7c2869a89804"/>
+				<reportElement x="305" y="23" width="100" height="20" uuid="3d5fc88b-b41f-4cde-ab03-7c2869a89804"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -264,7 +261,7 @@ INNER JOIN dokter AS d ON d.id_dokter = r.id_dokter WHERE id_transaksi = $P{id_t
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[KA Rekam Medis]]></text>
+				<text><![CDATA[Pemilik Klinik]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="416" y="38" width="139" height="20" uuid="647c3dd0-275a-4be0-8fdf-9e8d6ee5db05"/>
@@ -278,14 +275,14 @@ INNER JOIN dokter AS d ON d.id_dokter = r.id_dokter WHERE id_transaksi = $P{id_t
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[Ipit]]></text>
+				<text><![CDATA[Erlina Endang]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="416" y="0" width="139" height="27" uuid="a2d3f94d-2bb7-4224-b53e-cb5dae102031"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Jakarta, "+new SimpleDateFormat("EEEE dd MMMM yyyy", new Locale("id")).format(new Date())]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Bogor, "+new SimpleDateFormat("EEEE dd MMMM yyyy", new Locale("id")).format(new Date())]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
